# mod_amd

./: .gitignore  Makefile.am  README.md  mod_amd.cpp
conf/: dialplan.xml  mod_amd.conf.xml
